ansible/roles/k8s-deploy/templates/k8s-manifests/020-svc-nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
