ansible/roles/k8s-deploy/templates/k8s-manifests/010-ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: my-app.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
